[workspace.package]
edition = "2024"
rust-version = "1.86.0"
authors = ["Théodore Prévot <"]
repository = "https://github.com/totodore/socketioxide"
homepage = "https://github.com/totodore/socketioxide"
keywords = ["socketio", "tower", "axum", "hyper", "websocket"]
readme = "README.md"
categories = [
    "asynchronous",
    "network-programming",
    "web-programming::websocket",
]
license = "MIT"

[workspace]
members = ["crates/*", "e2e/*"]
exclude = ["crates/parser-common/fuzz", "crates/parser-msgpack/fuzz"]
default-members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
bytes = { version = "1.10", features = ["serde"] }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = "1.45"
tokio-tungstenite = "0.26"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.15", features = ["union"] }
serde_json = "1.0"
tower-layer = "0.3"
tower-service = "0.3"
http = "1.3"
http-body = "1.0"
http-body-util = "0.1"
thiserror = "2.0"
tracing = "0.1"
itoa = "1.0"
hyper-util.version = "0.1"
hyper = "1.6"
pin-project-lite = "0.2"
matchit = "0.8"
rmp-serde = "1.3"
rmp = "0.8"

# Dev deps
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"], default-features = false }
criterion = { version = "0.5", features = [
    "rayon",
    "html_reports",
], default-features = false }
axum = "0.8"
