[workspace.package]
edition = "2024"
rust-version = "1.86.0"
authors = ["Théodore Prévot <"]
repository = "https://github.com/totodore/socketioxide"
homepage = "https://github.com/totodore/socketioxide"
keywords = ["socketio", "tower", "axum", "hyper", "websocket"]
readme = "README.md"
categories = [
    "asynchronous",
    "network-programming",
    "web-programming::websocket",
]
license = "MIT"

[workspace]
members = ["crates/*", "e2e/*"]
exclude = ["crates/parser-common/fuzz", "crates/parser-msgpack/fuzz"]
default-members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
bytes = { version = "1.11", features = ["serde"] }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = "1.51"
tokio-tungstenite = "0.29"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.15", features = ["union", "serde"] }
serde_json = "1.0"
tower-layer = "0.3"
tower-service = "0.3"
http = "1.4"
http-body = "1.0"
http-body-util = "0.1"
thiserror = "2.0"
tracing = "0.1"
itoa = "1.0"
hyper-util.version = "0.1"
hyper = "1.9"
pin-project-lite = "0.2"
matchit = "0.9"
rmp-serde = "1.3"
rmp = "0.8"

# Dev deps
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.18", features = ["io"], default-features = false }
criterion = { package = "codspeed-criterion-compat", version = "4" }
axum = "0.8"

[workspace.lints.clippy]
correctness = "deny"
all = "warn"
complexity = "warn"
suspicious = "warn"
perf = "warn"

[workspace.lints.rust]
rust_2018_idioms = "warn"
rust_2024_compatibility = "warn"
future_incompatible = "warn"
nonstandard_style = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
