[package]
name = "socketioxide-e2e"
version = "0.3.0"
edition = "2021"

[dependencies]
engineioxide = { path = "../engineioxide" }
socketioxide = { path = "../socketioxide" }
hyper = { version = "0.14.26" }
tokio = { version = "1.13.0", features = ["full"] }
tower = { version = "0.4.13" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
serde_json = "1.0.95"
futures = "0.3.27"

[[bin]]
name = "socketioxide-e2e"
path = "src/socketioxide.rs"

[[bin]]
name = "engineioxide-e2e"
path = "src/engineioxide.rs"