[package]
name = "engineio-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
base64 = "0.21.0"
bytes = "1.4.0"
futures = "0.3.27"
futures-core = "0.3.27"
http = "0.2.9"
http-body = "0.4.5"
hyper = { version = "0.14.25", features = ["http1", "http2", "server", "stream", "runtime"] }
lazy_static = "1.4.0"
pin-project = "1.0.12"
rs-snowflake = "0.6.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = "1.26.0"
tokio-tungstenite = "0.18.0"
tower = "0.4.13"
tower-http = "0.4.0"
tracing = "0.1.37"
