[workspace]
members = ["*"]
exclude = ["target", "loco-rooms-chat"]
resolver = "2"

[workspace.dependencies]
futures = "0.3.27"
tokio = "1.35.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tower = { version = "0.4.13", default-features = false }
tracing = "0.1.37"
tracing-subscriber = "0.3.18"
axum = "0.7.5"
hyper-util.version = "0.1.1"
hyper = { version = "1.0.1", features = ["http1", "server"] }
