[workspace]
members = ["*"]
exclude = ["target", "loco-rooms-chat"]
resolver = "2"

[workspace.dependencies]
futures = "0.3.27"
tokio = "1.35.0"
serde = { version = "1.0.193", features = ["derive"] }
rmpv = { version = "1.3.0", features = ["with-serde"] }
tower = { version = "0.5.0", default-features = false }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = "0.7"
hyper-util.version = "0.1.1"
hyper = { version = "1.0.1", features = ["http1", "server"] }
socketioxide = { path = "../crates/socketioxide" }
serde_json = "1"
