[workspace]
members = ["*"]
exclude = ["target", "loco-rooms-chat"]
resolver = "2"

[workspace.dependencies]
futures = "0.3.27"
tokio = "1.44"
serde = { version = "1", features = ["derive"] }
rmpv = { version = "1.3", features = ["with-serde"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
hyper-util.version = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
socketioxide = { path = "../crates/socketioxide" }
socketioxide-redis = { path = "../crates/socketioxide-redis", features = [
    "redis",
    "redis-cluster",
    "fred",
] }
socketioxide-mongodb = { path = "../crates/socketioxide-mongodb" }
serde_json = "1"
