[package]
name = "socketio-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engineio-server = { path = "../engineio-server" }
futures = "0.3.27"
futures-core = "0.3.27"
tokio = "1.26.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
tower = "0.4.13"
tower-http = "0.4.0"
tracing = "0.1.37"
thiserror = "1.0.40"
itertools = "0.10.5"
