[package]
name = "socketioxide"
description = "Socket IO server implementation in rust as a Tower Service."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "../README.md"


[dependencies]
engineioxide = { path = "../engineioxide", version = "0.9.1" }
futures.workspace = true
tokio = { workspace = true, features = ["rt"] }
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
http.workspace = true
http-body.workspace = true
thiserror.workspace = true
itoa.workspace = true
hyper.workspace = true

# Extensions
dashmap = { version = "5.4.0", optional = true }

# Tracing
tracing = { workspace = true, optional = true }

# State
state = { version = "0.6.0", optional = true }

[features]
v4 = ["engineioxide/v3"]
test-utils = []
tracing = ["dep:tracing", "engineioxide/tracing"]
extensions = ["dep:dashmap"]
state = ["dep:state"]

[dev-dependencies]
engineioxide = { path = "../engineioxide", features = [
    "v3",
    "tracing",
    "test-utils",
] }
tokio-tungstenite.workspace = true
axum.workspace = true
salvo.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
] }
tracing-subscriber.workspace = true
criterion.workspace = true
hyper-util = { workspace = true, features = ["tokio", "client-legacy"] }
http-body-util.workspace = true

# docs.rs-specific configuration
[package.metadata.docs.rs]
features = ["v4", "extensions", "tracing", "state"]
# Special configuration for docs.rs build
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "packet_encode"
path = "benches/packet_encode.rs"
harness = false

[[bench]]
name = "packet_decode"
path = "benches/packet_decode.rs"
harness = false

[[bench]]
name = "itoa_bench"
path = "benches/itoa_bench.rs"
harness = false
