[package]
name = "redisioxide"
description = "Redis adapter for socketioxide"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"


[dependencies]
socketioxide = { path = "../../socketioxide", version = "0.9.0" }
futures.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt"] }
redis = { workspace = "0.24.0", features = ["tokio-comp"] }
async-trait = "0.1.74"

[dev-dependencies]
tokio = { workspace = true, features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
] }

# docs.rs-specific configuration
[package.metadata.docs.rs]
features = []
# Special configuration for docs.rs build
rustdoc-args = ["--cfg", "docsrs"]
