[package]
name = "socketioxide-adapter-redis"
description = "Redis adapter for the socketioxide protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
socketioxide-core = { version = "0.15.1", path = "../socketioxide-core" }
socketioxide = { version = "0.15.1", path = "../socketioxide" }
redis = { version = "0.27.5", features = [
    "aio",
    "tokio-comp",
], default-features = false }
