[package]
name = "engineioxide-core"
description = "Engineioxide core types and utilities"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
rand = "0.9"
base64 = "0.22"
serde.workspace = true
bytes.workspace = true
serde_json.workspace = true
http-body.workspace = true
http-body-util.workspace = true
http.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["sync"] }
smallvec.workspace = true

# Engine.io V3 payload
itoa = { workspace = true, optional = true }
memchr = { version = "2.7", optional = true }
unicode-segmentation = { version = "1.12", optional = true }

# Tracing
tracing = { workspace = true, optional = true }


[features]
v3 = ["dep:memchr", "dep:unicode-segmentation", "dep:itoa"]
tracing = ["dep:tracing"]

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
