[package]
name = "engineioxide-core"
description = "Engineioxide core types and utilities"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
rand = "0.10"
base64 = "0.22"
serde.workspace = true
bytes.workspace = true
