[package]
name = "socketioxide-core"
description = "Core of the socketioxide library. Contains basic types and interfaces for the socketioxide crate and all other related sub-crates."
version = "0.15.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
bytes.workspace = true
engineioxide = { version = "0.15.0", path = "../engineioxide" }
serde.workspace = true
thiserror.workspace = true
futures-core.workspace = true
smallvec = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_json.workspace = true
arbitrary = { version = "1.3.2", features = ["derive"] }
