[package]
name = "socketioxide-core"
description = "Core of the socketioxide library. Contains basic types and interfaces for the socketioxide crate and all other related sub-crates."
version = "0.18.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[features]
remote-adapter = [
    "dep:pin-project-lite",
    "dep:futures-util",
    "dep:tokio",
    "dep:tracing",
]

[dependencies]
bytes.workspace = true
engineioxide-core = { version = "0.2", path = "../engineioxide-core" }
serde.workspace = true
thiserror.workspace = true
futures-core.workspace = true
futures-util = { workspace = true, optional = true }
pin-project-lite = { workspace = true, optional = true }
smallvec = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["sync", "time"], optional = true }
tracing = { workspace = true, optional = true }

[target."cfg(fuzzing)".dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }

[dev-dependencies]
serde_json.workspace = true
rmp-serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
